# cmake_template

./: .clang-tidy  .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake
.github/workflows/: template-janitor.yml
cli/: main.cpp
configured_files/: config.hpp.in
include/myproject/: sample_library.hpp
pybind/: CMakeLists.txt  pybind.cpp
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/pybind/: pybind.cpp
src/sample_library/: sample_library.cpp
test/: constexpr_tests.cpp
